--- a/src/app.scss
+++ b/src/app.scss
@@ -5,5 +5,14 @@
         width: 100%;
         height: calc(100vh - 70px); // to account for height of the navbar (70px)
         background-color: lightsalmon;
+        position: relative;
+        top: 70px; // start after the 70px navbar
+        scroll-snap-type: y mandatory; // handles snap scrolling
+
+        > * { // for each component in sections div
+            width: 100vw;
+            height: calc(100vh - 70px);
+            scroll-snap-align: start;
+        }
     }
 }
