--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,4 +4,5 @@
     background-color: #15023a;
     position: fixed;
     top: 0;
+    z-index: 2; // so that navbar fixed navbar will hover over sections
 }
