--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,7 +1,9 @@
+@import "../../global.scss";
+
 .navbar {
     width: 100%;
     height: 70px;
-    background-color: #15023a;
+    background-color: $mainColour;
     position: fixed;
     top: 0;
     z-index: 2; // so that navbar fixed navbar will hover over sections
