--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,8 +3,26 @@
 .navbar {
     width: 100%;
     height: 70px;
-    background-color: $mainColour;
+    background-color: white;
+    color: $mainColour;
     position: fixed;
     top: 0;
     z-index: 2; // so that navbar fixed navbar will hover over sections
+
+    .wrapper {
+        padding: 10px 30px;
+        display: flex; // allows text to continue across (span)
+        align-items: center;
+        justify-content: space-between;
+
+        .left {
+
+            .logo {
+                font-size: 40px;
+                font-weight: 700;
+                text-decoration: none;
+                color: inherit;
+            }
+        }
+    }
 }
