--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -44,5 +44,24 @@
                 }
             }
         }
+
+        .right {
+
+            .hamburger {
+                width: 32px;
+                height: 25px;
+                display: flex;
+                flex-direction: column; // allows all elements in hamburger div to span vertically
+                justify-content: space-between;
+                cursor: pointer;
+
+                span {
+                    width: 100%;
+                    height: 3px;
+                    background-color: $mainColour;
+                }
+            }
+
+        }
     }
 }
