--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -42,6 +42,11 @@
                 span {
                     font-size: 15px;
                     font-weight: 400;
+                    
+                    a {
+                        text-decoration: none;
+                        color: inherit;
+                    }
                 }
             }
         }
