--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,44 @@
 .intro {
-    background-color: lightpink;
+    background-color: white;
+    position: relative;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
 }
+
+.primary-text-on-image {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    padding-left: 5em;
+    padding-top: 1em;
+    justify-content: center;
+
+    h1 {
+        font-size: 60px;
+        margin: 10px 0;
+        // background-color: black;
+        // color: white;
+    }
+
+    h2 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 30px;
+    }
+  }
+
+.credit-text-on-image {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+
+    p {
+        font-size: 10px;
+        color: rgba(0, 0, 0, 0.623);
+    }
+  }
