--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -40,5 +40,10 @@
     p {
         font-size: 10px;
         color: rgba(0, 0, 0, 0.623);
+
+        a {
+            // text-decoration: none;
+            color: inherit;
+        }
     }
   }
