add typing animation to title

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -25,6 +25,11 @@
 
     h2 {
         font-size: 35px;
+
+        span {
+            color: crimson;
+            font-size: inherit;
+        }
     }
 
     h3 {
