adding some cursor animation

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -30,6 +30,19 @@
             color: crimson;
             font-size: inherit;
         }
+
+        .ityped-cursor {
+            animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            50% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
     }
 
     h3 {
