--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,35 +1,89 @@
+@import "../../global.scss";
+
+
 .about {
     background-color: white;
     display: flex;
 
     .left {
         flex: 0.4;
-        background-color: lightyellow;
+        // background-color: lightyellow;
         overflow: hidden;
 
 
         .imgContainer {
-            width: 700px;
-            height: 700px;
+            width: 100%;
+            height: 100%;
             display: flex;
-            margin: 60px 20px;
-            align-items: flex-start;
+            flex-direction: column;
+            padding: 10px;
+            // margin: 60px 20px;
+            align-items: center;
+            // justify-content: center;
 
             img {
-                height: 50%;
+                height: 40%;
                 border-radius: 50%;
+                align-items: center;
                 transform: scaleX(-1);
             }
-        }
 
-        .caption {
-            justify-content: center;
-            align-items: center;
+            .captionContainer {
+                height: 30%;
+                justify-content: center;
+                align-items: center;
+                float: center;
+                display: flex;
+                flex-direction: column;
+
+                .title {
+                    font-size: 30px;
+                }
+
+                p {
+                    font-size: 14px;
+                    margin: 7px 0;
+                }
+
+                .badge {
+                    background-color: $mainColour;
+                    font-size: 12px;
+                    color: white;
+                    padding: 5px;
+                    border-radius: 10px;
+
+                }
+            }
         }
     }
 
     .right {
         flex: 0.6;
-        background-color: lightsalmon;
+        // background-color: lightsalmon;
+
+        .wrapper {
+            width: 80%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            
+            p {
+                font-size: 16px;
+                margin: 10px 0;
+            }
+
+            .greeting {
+                font-size: 40px;
+                color: $mainColour;
+                margin: 2px 0;
+            }
+
+            span {
+                color: $mainColour;
+                font-weight: bold;
+            }
+        }
     }
 }
