--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,75 @@
+@import "../../global.scss";
+
 .portfolio {
     background-color: lightskyblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+        font-size: 50px;
+    }
+
+    ul {
+        margin: 10px;
+        padding: 0;
+        list-style: none;
+        display: flex;
+
+        li {
+            font-size: 14px;
+            margin-right: 50px;
+            padding: 7px;
+            border-radius: 10px;
+            cursor: pointer;
+
+            &.active {
+                background-color: $mainColour;
+                color: white;
+            }
+        }
+    }
+
+    .container {
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .item {
+            width: 200px;
+            height: 150px;
+            border-radius: 20px;
+            border: 1px solid lightgray;
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            position: relative;
+            transition: all 0.5s ease;
+            cursor: pointer;
+
+            img {
+                height: 100%;
+                object-fit: cover;
+                z-index: 1;
+            }
+
+            h3 {
+                position: absolute;
+                font-size: 20px;
+            }
+
+            &:hover {
+                background-color: $mainColour;
+
+                img {
+                    opacity: 0.2;
+                    z-index: 0;
+                }
+            }
+        }
+    }
 }
