add onclick to nav portfolio projects

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .portfolio {
-    background-color: lightskyblue;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,19 +15,6 @@
         padding: 0;
         list-style: none;
         display: flex;
-
-        li {
-            font-size: 14px;
-            margin-right: 50px;
-            padding: 7px;
-            border-radius: 10px;
-            cursor: pointer;
-
-            &.active {
-                background-color: $mainColour;
-                color: white;
-            }
-        }
     }
 
     .container {
