--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -74,10 +74,22 @@
                 margin: 10px 0;
             }
 
+            .closing {
+                .sClose {
+                    a {
+                        font-weight: normal;
+                    }
+                }                
+            }
+
             .greeting {
                 font-size: 40px;
                 color: $mainColour;
                 margin: 2px 0;
+            }
+
+            .caption {
+                font-size:14px;
             }
 
             span {
