--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -25,8 +25,8 @@
         flex-wrap: wrap;
 
         .item {
-            width: 200px;
-            height: 150px;
+            width: 250px;
+            height: 200px;
             border-radius: 20px;
             border: 1px solid lightgray;
             margin: 10px 20px;
@@ -47,6 +47,7 @@
             h3 {
                 position: absolute;
                 font-size: 20px;
+                text-align: center;
             }
 
             &:hover {
