--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -36,7 +36,7 @@
             color: white;
             position: relative;
             transition: all 0.5s ease;
-            cursor: pointer;
+            // cursor: pointer;
 
             img {
                 height: 100%;
