--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -5,6 +5,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+
+    .arrow {
+        position: absolute;
+        height: 50px;
+        cursor: pointer;
+
+         &.left {
+             left: 100px;
+             transform: rotateY(180deg);
+         }
+
+         &.right {
+            right: 100px;
+        }
+
+    }
 
     .slider {
         height: 350px;
