--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -54,7 +54,7 @@
 
                     .leftContainer {
                         width: 90%;
-                        height: 70%;
+                        height: 90%;
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
@@ -79,13 +79,17 @@
 
                         p {
                             font-size: 13px;
-                        }
-
-                        span {
-                            font-size: 12px;
-                            font-weight: 600;
-                            text-decoration: underline;
-                            cursor: pointer;
+                            overflow: hidden;
+                            
+                            .badge {
+                                background-color: $mainColour;
+                                font-size: 12px;
+                                color: white;
+                                padding: 3px;
+                                border-radius: 10px;
+                                margin-top: 5px;
+                                margin-bottom: 5px;
+                            }
                         }
                     }
                 }
@@ -112,9 +116,10 @@
 
                         li {
                             align-items: center;
-                            font-size: 20px;
-                            margin: 10px 0px;
-                            color: $mainColour;
+                            font-size: 15px;
+                            padding: 10px 10px;
+                            // margin: 10px 0px;
+                            // color: $mainColour;
                         }
                     }
                 }
