set up email messages

--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -47,6 +47,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                // box-shadow: 12px 12px 2px 1px rgba(171, 17, 177, 0.2);
 
                 .left {
                     flex: 4;
